--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ p {
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    cursor: pointer;
     margin-bottom: 60px;
 }
 
@@ -60,6 +59,8 @@ p {
     max-width: 200px;
     border-radius: 100%;
     overflow: hidden;
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .button img {
